force-app/main/default/objects/Case/fields/Account_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Shipping_State__c</fullName>
    <formula>Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Shipping State</label>
    <type>Text</type>
</CustomField>