force-app/main/default/objects/Case/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF(

AND( Account.Inactive__c = FALSE, Account.On_Hold__c = FALSE) , 

IMAGE(&apos;/resource/Customer_Status_Active_image5&apos;, &quot;Active&quot;) , 


IF(

AND( Account.Inactive__c = FALSE, Account.On_Hold__c = TRUE) , 

IMAGE(&apos;/resource/Customer_Status_OnHold_image2&apos;, &quot;On Hold&quot;), 


IF(

Account.Inactive__c = TRUE, 


IMAGE(&apos;/resource/Customer_Status_Inactive_image2&apos;, &quot;Inactive&quot;), 


&quot;&quot;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>