force-app/main/default/objects/Case/fields/Accpac_Number__c.field-meta.xml
<CustomField>
    <fullName>Accpac_Number__c</fullName>
    <formula>Account.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accpac Number</label>
    <type>Text</type>
</CustomField>