force-app/main/default/objects/Case/fields/Additional_Background__c.field-meta.xml
<CustomField>
    <fullName>Additional_Background__c</fullName>
    <description>used for customer cancellation tickets</description>
    <label>Additional Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>