force-app/main/default/objects/Case/fields/Additional_Ownership_Change_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Ownership_Change_Information__c</fullName>
    <description>used for ownership change tickets</description>
    <label>Additional Ownership Change Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>