force-app/main/default/objects/Case/fields/Appointment_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Requested_Date__c</fullName>
    <label>Appointment Requested Date</label>
    <type>Date</type>
</CustomField>