force-app/main/default/objects/Case/fields/Appointment_Time_Block__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time_Block__c</fullName>
    <label>Appointment Time Block</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Day</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>After Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>