force-app/main/default/objects/Case/fields/Cancellation_Applies_To_Formula__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Applies_To_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Account.Id,  Account.AccPac_Account__c &amp; &quot; - &quot; &amp;  Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>-If this ticket is associated to a BILL TO account, the cancellation will apply to every account in the hierarchy.

-If this ticket is associated to a SHIP TO account, the cancellation will apply to the ship-to account only.</inlineHelpText>
    <label>Cancellation Applies To</label>
    <type>Text</type>
</CustomField>