force-app/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Why does the customer want to cancel?</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID 19 - Cancellation</fullName>
            </value>
            <value>
                <fullName>Moving Locations</fullName>
            </value>
            <value>
                <fullName>Closure/Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Price Concerns</fullName>
            </value>
            <value>
                <fullName>Product Issues</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>Billing Issues</fullName>
            </value>
            <value>
                <fullName>Product Not Needed/Insourced</fullName>
            </value>
            <value>
                <fullName>Vendor Consolidation</fullName>
            </value>
            <value>
                <fullName>Citron Initiated</fullName>
            </value>
            <value>
                <fullName>Loss to Competitor</fullName>
                <isActive>false</isActive>
                <label>Loss to Competitor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>