force-app/main/default/objects/Case/fields/Cancellation_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Sub_Reason__c</fullName>
    <label>Cancellation Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancellation_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too Many Tech’s</fullName>
            </value>
            <value>
                <fullName>Service – Bad Site Survey</fullName>
            </value>
            <value>
                <fullName>Missed Services</fullName>
            </value>
            <value>
                <fullName>Poor Execution of Service</fullName>
            </value>
            <value>
                <fullName>Access Requirements</fullName>
            </value>
            <value>
                <fullName>Dysfunctional Product</fullName>
            </value>
            <value>
                <fullName>Unprofitable Customers</fullName>
            </value>
            <value>
                <fullName>Low Margin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>