force-app/main/default/objects/Case/fields/Cancellation_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Ticket_Type__c</fullName>
    <label>Cancellation Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>