force-app/main/default/objects/Case/fields/Community_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Community_Service_Type__c</fullName>
    <label>Community Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Community_Services__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Repair / Replacement</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>