force-app/main/default/objects/Case/fields/Community_Services__c.field-meta.xml
<CustomField>
    <fullName>Community_Services__c</fullName>
    <label>Community Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Air Freshener</fullName>
            </value>
            <value>
                <fullName>Deep Cleaning</fullName>
            </value>
            <value>
                <fullName>Hand Care</fullName>
            </value>
            <value>
                <fullName>Infant Care</fullName>
            </value>
            <value>
                <fullName>Menstrual Care</fullName>
            </value>
            <value>
                <fullName>Pest Control Service</fullName>
            </value>
            <value>
                <fullName>Restroom Automation</fullName>
            </value>
            <value>
                <fullName>Urinal / Toilet Treatment</fullName>
            </value>
            <value>
                <fullName>Vending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>