force-app/main/default/objects/Case/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>Required only when Cancellation Reason is &quot;Loss to Competitor&quot;.</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_to_Competitor__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>