force-app/main/default/objects/Case/fields/CPQ2_Core_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Core_List_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core List Price</label>
    <referenceTo>CPQ2_ContractPrice__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>