force-app/main/default/objects/Case/fields/Created_By_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User_Profile_Name__c</fullName>
    <label>Created By User Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>