force-app/main/default/objects/Case/fields/Created_Date_Previous_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Previous_Business_Day__c</fullName>
    <formula>CreatedDate + (1* 
CASE (MOD( DateValue(CreatedDate) - DATE(1900, 1,7),7), 
0,0, 
1,0, 
2,0, 
3,0, 
4,0, 
5,2, 
6,1, 
0 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Previous Business Day)</label>
    <type>Date</type>
</CustomField>