force-app/main/default/objects/Case/fields/Customer_Agreement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement_Uploaded__c</fullName>
    <label>Customer Agreement Uploaded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>