force-app/main/default/objects/Case/fields/Customer_Impact_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact_Analysis_Notes__c</fullName>
    <label>Customer Impact Analysis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>