force-app/main/default/objects/Case/fields/Decrease_Detected__c.field-meta.xml
<CustomField>
    <fullName>Decrease_Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decrease Detected</label>
    <type>Checkbox</type>
</CustomField>