force-app/main/default/objects/Case/fields/Effective_Date_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Cancellation__c</fullName>
    <description>Choose date customer has/will cancel their service; service and invoice will continue up to this date. If already cancelled, choose today&apos;s date.</description>
    <inlineHelpText>Choose date customer has/will cancel their service; service and invoice will continue up to this date. If already cancelled, choose today&apos;s date.</inlineHelpText>
    <label>Effective Date of Cancellation</label>
    <type>Date</type>
</CustomField>