force-app/main/default/objects/Case/fields/Effective_Date_of_Ownership_Change__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Ownership_Change__c</fullName>
    <description>used for ownership change tickets</description>
    <label>Effective Date of Ownership Change</label>
    <type>Date</type>
</CustomField>