force-app/main/default/objects/Case/fields/Is_Pest_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Is_Pest_Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If TRUE, the Order generated from the Site Survey being approved will be flagged as emergency to allow usage in the Emergency Dispatch Wizard.</inlineHelpText>
    <label>Is Pest Emergency</label>
    <type>Checkbox</type>
</CustomField>