force-app/main/default/objects/Case/fields/IsInstallationTicket__c.field-meta.xml
<CustomField>
    <fullName>IsInstallationTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInstallationTicket</label>
    <type>Checkbox</type>
</CustomField>