force-app/main/default/objects/Case/fields/IsRepairTicket__c.field-meta.xml
<CustomField>
    <fullName>IsRepairTicket__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field used to indicate that the Ticket was generated due to the completion of a Repair Work Order</inlineHelpText>
    <label>IsRepairTicket</label>
    <type>Checkbox</type>
</CustomField>