force-app/main/default/objects/Case/fields/Last_Inbound_Email_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Email_Date_Time__c</fullName>
    <label>Last Inbound Email Date/Time</label>
    <type>DateTime</type>
</CustomField>