force-app/main/default/objects/Case/fields/Last_Ownership_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Ownership_Change__c</fullName>
    <description>this field value is updated by process builder whenever case(ticket) ownership is changed.</description>
    <label>Ticket Owner Change</label>
    <type>DateTime</type>
</CustomField>