force-app/main/default/objects/Case/fields/Last_Ticket_Comment_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Ticket_Comment_Created_Date_Time__c</fullName>
    <inlineHelpText>Stamped when the last associated Case/Ticket Comment record was created.</inlineHelpText>
    <label>Last Ticket Comment Created Date/Time</label>
    <type>DateTime</type>
</CustomField>