force-app/main/default/objects/Case/fields/Lines_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Business__c</fullName>
    <label>Lines of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Life Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>