force-app/main/default/objects/Case/fields/Manager_s_Email_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email_Account_Owner__c</fullName>
    <description>Used in cancellation ticket process: ability to send an email to sales rep&apos;s manager when a cancellation ticket is created. Value stamped when a ticket is created. An email account owner&apos;s manager&apos;s email address</description>
    <inlineHelpText>The email address of the related account owner&apos;s manager.
This field is automatically populated when a ticket is created.</inlineHelpText>
    <label>Manager&apos;s Email (Account Owner)</label>
    <type>Email</type>
</CustomField>