force-app/main/default/objects/Case/fields/Modify_Seasonal_Order__c.field-meta.xml
<CustomField>
    <fullName>Modify_Seasonal_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify Seasonal Order</label>
    <type>Checkbox</type>
</CustomField>