force-app/main/default/objects/Case/fields/New_AP_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>New_AP_Email_Address__c</fullName>
    <label>New AP Contact Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>