force-app/main/default/objects/Case/fields/New_Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Bill_To_Address__c</fullName>
    <description>used for ownership changes</description>
    <label>New Bill-To Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>