force-app/main/default/objects/Case/fields/New_Customer__c.field-meta.xml
<CustomField>
    <fullName>New_Customer__c</fullName>
    <inlineHelpText>Add the new customer (Account) if you select the value &quot;Ownership Change&quot; from the Type field</inlineHelpText>
    <label>New Customer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>