force-app/main/default/objects/Case/fields/New_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Legal_Entity_Name__c</fullName>
    <description>used for ownership change tickets</description>
    <label>New Legal Entity Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>