force-app/main/default/objects/Case/fields/No_Further_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Further_Action_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this checkbox to indicate that a Ticket can be closed and that there is no further action required.</inlineHelpText>
    <label>No Further Action Required</label>
    <type>Checkbox</type>
</CustomField>