force-app/main/default/objects/Case/fields/Open_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Closed_Date__c</fullName>
    <description>Used on certain reports</description>
    <formula>IF( IsClosed , ClosedDate , CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used on certain reports</inlineHelpText>
    <label>Open/Closed Date</label>
    <type>DateTime</type>
</CustomField>