force-app/main/default/objects/Case/fields/Opportunity_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Id__c</fullName>
    <formula>CASESAFEID(Opportunity__r.RecordTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type Id</label>
    <type>Text</type>
</CustomField>