force-app/main/default/objects/Case/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <formula>TEXT(Order__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>