force-app/main/default/objects/Case/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <description>This field is used in some reports</description>
    <formula>IF( LEFT(OwnerId,3)= &quot;005&quot;, &quot;User&quot;, &quot;Queue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used in some reports</inlineHelpText>
    <label>Owner Type</label>
    <type>Text</type>
</CustomField>