force-app/main/default/objects/Case/fields/Pest_Emergency_Order_Draft_Override__c.field-meta.xml
<CustomField>
    <fullName>Pest_Emergency_Order_Draft_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pest Emergency Order Draft Override</label>
    <type>Checkbox</type>
</CustomField>