force-app/main/default/objects/Case/fields/Pest_Related_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Pest_Related_Ticket__c</fullName>
    <label>Is this Pest Control related?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>