force-app/main/default/objects/Case/fields/PestPac__c.field-meta.xml
<CustomField>
    <fullName>PestPac__c</fullName>
    <label>PestPac</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>