force-app/main/default/objects/Case/fields/Preventing_Urgent_Service__c.field-meta.xml
<CustomField>
    <fullName>Preventing_Urgent_Service__c</fullName>
    <inlineHelpText>Does this ticket need immediate action because a customer needs to be serviced immediately (asap/&lt;24 hrs)?</inlineHelpText>
    <label>Preventing Urgent Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>