force-app/main/default/objects/Case/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <length>225</length>
    <type>Text</type>
</CustomField>