force-app/main/default/objects/Case/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <description>Used for Covid19 Emergency Change</description>
    <label>Reactivation Date</label>
    <type>Date</type>
</CustomField>