force-app/main/default/objects/Case/fields/Rejection_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason_Notes__c</fullName>
    <label>Rejection Reason Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>