force-app/main/default/objects/Case/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The issue related to the ticket.</description>
    <label>Related Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>