force-app/main/default/objects/Case/fields/Repair_Notes__c.field-meta.xml
<CustomField>
    <fullName>Repair_Notes__c</fullName>
    <inlineHelpText>Repair Notes from the Technician</inlineHelpText>
    <label>Repair Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>