force-app/main/default/objects/Case/fields/Requested_De_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_De_Install_Date__c</fullName>
    <inlineHelpText>Use only if customer requested a specific date for de-installation &amp; up to 10 days before effective cancellation date.</inlineHelpText>
    <label>Requested De-Install Date</label>
    <type>Date</type>
</CustomField>