force-app/main/default/objects/Case/fields/RingDNA_Notes__c.field-meta.xml
<CustomField>
    <fullName>RingDNA_Notes__c</fullName>
    <description>Used in ringDNA  process builder.( move notes to case )</description>
    <label>RingDNA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>