force-app/main/default/objects/Case/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <label>Root Cause Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>