force-app/main/default/objects/Case/fields/Root_Cause_Analysis_Notes__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis_Notes__c</fullName>
    <label>Root Cause Analysis Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>