force-app/main/default/objects/Case/fields/Ticket_Age_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Age_In_Hours__c</fullName>
    <formula>IF(IsClosed=false , (ROUND(NOW()-CreatedDate, 0))*24, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Age (In Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>