force-app/main/default/objects/Case/fields/Ticket_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Status_Details__c</fullName>
    <label>Ticket Status Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>