force-app/main/default/objects/Case/fields/Ticket_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Ticket_User_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket User Profile</label>
    <type>Text</type>
</CustomField>