force-app/main/default/objects/Case/fields/Unit_to_Repair_Include_Colour__c.field-meta.xml
<CustomField>
    <fullName>Unit_to_Repair_Include_Colour__c</fullName>
    <label>Unit to Repair (Include Colour)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>