force-app/main/default/objects/Case/fields/Unresponded_Email__c.field-meta.xml
<CustomField>
    <fullName>Unresponded_Email__c</fullName>
    <description>This field is used to indicate if there has been any inbound email activity greater than or equal to the last outbound email activity.</description>
    <formula>IF(

Last_Inbound_Email_Date_Time__c &gt;= Last_Outbound_Email_Date_Time__c,

IMAGE(&apos;/resource/1537501414000/Email_Icon&apos;, TEXT(Last_Inbound_Email_Date_Time__c) , 25, 25), 

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unresponded Email</label>
    <type>Text</type>
</CustomField>