force-app/main/default/objects/Case/fields/Value_of_MRR_Lost__c.field-meta.xml
<CustomField>
    <fullName>Value_of_MRR_Lost__c</fullName>
    <inlineHelpText>To be entered by the Account Executive: the total MRR value of cancelled ship-to (total of all locations if cancelling all ship-to’s through parent account)</inlineHelpText>
    <label>Value of MRR Lost ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>