force-app/main/default/objects/Case/fields/Work_Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Location</label>
    <referenceTo>Work_Order_Room__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>