force-app/main/default/objects/Case/recordTypes/Change_Current_Services.recordType-meta.xml
<RecordType>
    <fullName>Change_Current_Services</fullName>
    <active>true</active>
    <businessProcess>Change Service</businessProcess>
    <description>Request the modification of an existing Order</description>
    <label>Change Current Services</label>
</RecordType>