force-app/main/default/objects/Case/recordTypes/Change_Current_Services_Tech.recordType-meta.xml
<RecordType>
    <fullName>Change_Current_Services_Tech</fullName>
    <active>true</active>
    <businessProcess>Change Service</businessProcess>
    <description>Request by FSL Tech for the modification of an existing Order</description>
    <label>Change Current Services (Tech)</label>
</RecordType>