force-app/main/default/objects/Case/recordTypes/Community.recordType-meta.xml
<RecordType>
    <fullName>Community</fullName>
    <active>true</active>
    <businessProcess>General Inquiry</businessProcess>
    <description>Ticket record type specific to customer community.</description>
    <label>Community</label>
</RecordType>