force-app/main/default/objects/Case/recordTypes/Core_List_Pricing_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Core_List_Pricing_Change_Request</fullName>
    <active>true</active>
    <businessProcess>Core List Price Change Request</businessProcess>
    <label>Core List Pricing Change Request</label>
</RecordType>